# mcp-hashlib

./: .bumpversion.cfg  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: mcp-publish.yml  pypi-publish.yml
scripts/: install-skill.py
skills/mcp-hashlib/: SKILL.md
src/mcp_hashlib/: __init__.py  __main__.py  tools.py
tests/: conftest.py  test_tools.py
