[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hashlib"
version = "0.1.2"
description = "An MCP server that exposes hashlib functionality"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dario Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "mcp>=1.4.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "mypy",
]
all = ["mcp-hashlib[dev,test,lint]"]

[project.scripts]
mcp-hashlib = "mcp_hashlib.__main__:run"

[project.urls]
Homepage = "https://github.com/daedalus/mcp-hashlib"
Repository = "https://github.com/daedalus/mcp-hashlib"
Issues = "https://github.com/daedalus/mcp-hashlib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_hashlib"]

[tool.hatch.build.targets.sdist]
include = ["src/mcp_hashlib"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501", "ANN201", "ANN001", "ANN401", "TC010"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["attr-defined", "arg-type", "assignment", "misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=mcp_hashlib --cov-report=term-missing --cov-fail-under=75"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["."]
branch = true
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]